ajustando construtor url(String) - obsoleto